<resources>
    <string name="app_name">SchoolManagement</string>
    <string name="image_description">No Image</string>
    <string name="up_case_app_name">QUẢN LÝ TRƯỜNG HỌC</string>
    <string name="hint_input_email">Nhập email</string>
    <string name="hint_input_password">Nhập mật khẩu</string>
    <string name="title_save_login">Lưu đăng nhập</string>
    <string name="title_login">Đăng nhập</string>
    <string name="text_forgot_password">Quên mật khẩu</string>
    <string name="title_change_password">Đổi mật khẩu</string>
    <string name="text_notify_forgot_password">Vui lòng nhập email đã tạo tài khoản. Mật khẩu mới sẽ được gửi vào email.</string>
    <string name="title_close">Đóng</string>
    <string name="title_confirm">Xác nhận</string>
    <string name="title_account">Tài khoản</string>
    <string name="title_personal_info">Thông tin cá nhân</string>
    <string name="title_male">Nam</string>
    <string name="title_female">Nữ</string>
    <string name="hint_input_name">Nhập họ tên</string>
    <string name="hint_input_phone_number">Nhập số điện thoại</string>
    <string name="hint_input_address">Nhập địa chỉ</string>
    <string name="input_personal_email">Nhập email cá nhân</string>
    <string name="title_birthday">Ngày sinh</string>
    <string name="title_phone_number">Số điện thoại</string>
    <string name="title_email">Email</string>
    <string name="hint_select_class">Chọn lớp</string>
    <string name="hint_select_faculty">Chọn khoa</string>
    <string name="title_submit">Xác nhận</string>
    <string name="title_faculty_id">Mã khoa</string>
    <string name="title_class_id">Mã lớp</string>
    <string name="title_gender">Giới tính</string>
    <string name="title_address">Địa chỉ</string>
    <string name="title_button_select_student">Chọn sinh viên</string>
    <string name="title_student_id">Mã sinh viên</string>
    <string name="title_change_to_class">Chuyển tới lớp</string>
    <string name="title_choose_class">Chọn lớp</string>
    <string name="title_first_grade">Điểm số 1</string>
    <string name="title_second_grade">Điểm số 2</string>
    <string name="title_third_grade">Điểm số 3</string>
    <string name="title_exam_grade">Điểm thi</string>
    <string name="title_final_grade">Điểm tổng</string>
    <string name="title_result">Kết quả</string>
    <string name="title_grade_board">Bảng điểm</string>
    <string name="title_subject">Môn học</string>
    <string name="title_input_first_grade">Nhập điểm lần 1</string>
    <string name="title_input_second_grade">Nhập điểm lần 2</string>
    <string name="input_third_grade">Nhập điểm lần 3</string>
    <string name="input_exam_grade">Nhập điểm thi</string>
    <string name="title_select">Chọn</string>
    <string name="title_learning_timetable">Lịch học</string>
    <string name="title_filter">Lọc tìm kiếm</string>
    <string name="input_class_id">Nhập mã lớp</string>
    <string name="error_empty_email">Vui lòng nhập email</string>
    <string name="error_format_email">Định dạng email không hợp lệ.</string>
    <string name="error_empty_password">Vui lòng nhập mật khẩu</string>
    <string name="error_length_password">Độ dài mật khẩu từ 8 đến 15 kí tự.Vui lòng nhập lại</string>
    <string name="empty">""</string>
    <string name="error_wrong_login">Email hoặc mật khẩu không chính xác.</string>
    <string name="error_network">Kết nối mạng đã ngắt.</string>
    <string name="retry">Thử lại</string>
    <string name="title_error_state">Có lỗi đã xảy ra</string>
    <string name="title_dash_board">Bảng chính</string>
    <string name="title_message">Tin nhắn</string>
    <string name="error_not_found_user">Không tìm thấy thông tin người dùng.</string>
    <string name="error_parse_data">Lỗi thao tác với dữ liệu từ máy chủ</string>
    <string name="choose_account_type">Chọn loại tài khoản</string>
    <string name="title_account_id">Mã tài khoản</string>
    <string name="title_send_password_success">Gửi mật khảu thành công.Vui lòng kiểm tra email để nhận mật khẩu.</string>
    <string name="title_success">Thành công</string>
    <string name="error_length_name">Độ dài họ tên tối đa là 40 kí tự</string>
    <string name="error_format_name">Định dạng họ tên không hợp lệ</string>
    <string name="error_create_user">Tạo tài khoản thất bại.Vui lòng kiểm tra lại server</string>
    <string name="error_registered_email">Email đã được đăng ký để tạo tài khoản.</string>
    <string name="title_empty_accounts">Danh sách tài khoản đang trống</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_information">Thông tin</string>
    <string name="title_full_name">Họ tên</string>
    <string name="title_password">Mật khẩu</string>
    <string name="transition_name_image_account">account_circle_image</string>
    <string name="transition_name_account_email">text_account_email</string>
    <string name="transition_name_account_type">text_account_type</string>
    <string name="title_account_type">Loại tài khoản</string>
    <string name="success_modify_info">Thay đổi thông tin tài khoản thành công!</string>
    <string name="success_change_password">Thay đổi mật khẩu thành công!</string>
    <string name="title_updated">Đã cập nhật</string>
    <string name="title_not_update">Chưa cập nhật</string>
    <string name="title_all">Tất cả</string>
    <string name="title_update_info">Cập nhật thông tin</string>
    <string name="hint_input_birthday">Chọn ngày sinh</string>
    <string name="title_update">Cập nhật</string>
    <string name="message_request_permission">Để truy cập vào kho ảnh của máy cần cấp quyền truy cập.Nhấn đồng ý để cấp quyền.</string>
    <string name="title_agree">Đồng ý</string>
    <string name="title_decline">Từ chối</string>
    <string name="title_select_birthday">Chọn ngày sinh</string>
    <string name="error_address_format">Định dạng địa chỉ không hợp lệ</string>
    <string name="error_phone_format">Định dạng số điện thoại không hợp lệ</string>
    <string name="error_birthday_format">Định dạng ngày sinh không hợp lệ</string>
    <string name="error_profile_image_not_selected">Vui lòng chọn ảnh</string>
    <string name="title_success_update_profile">Cập nhật thông tin thành công!</string>
    <string name="title_success_create_account">Tạo tài khoản thành công!</string>
    <string name="title_edit">Sửa</string>
    <string name="title_save">Lưu</string>
    <string name="title_status_detail_update_profile">Nhấn nút cập nhật để cập nhật thông tin cho tài khoản</string>
    <string name="success_save_modified_account_info">Sửa thông tin tài khoản thành công!</string>
    <string name="success_modify_profile_info">Thay đổi thông tin hồ sơ thành công!</string>
    <string name="faculty_teacher">Chủ nhiệm khoa</string>
    <string name="title_faculty_info">Thông tin khoa</string>
    <string name="title_faculty_name">Tên khoa</string>
    <string name="title_faculty_room_number">Số phòng</string>
    <string name="title_add_room">Thêm phòng</string>
    <string name="title_input_room_number">Nhập số phòng</string>
    <string name="title_input_room_name">Nhập tên phòng</string>
    <string name="title_office">Văn phòng</string>
    <string name="title_class_room">Phòng học</string>
    <string name="title_room_type">Loại phòng</string>
    <string name="title_empty_rooms">Danh sách phòng đang trống</string>
    <string name="title_empty_room_number">Vui lòng nhập số phòng</string>
    <string name="title_empty_room_name">Vui lòng nhập tên phòng</string>
    <string name="title_success_add_school_room">Thêm phòng mới thành công!</string>
    <string name="title_success_update_room_info">Cập nhật thông tin phòng thành công!</string>
</resources>
