<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal_100">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_room_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_input_room_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_room_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:hint="@string/title_input_room_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_room_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            android:text="@string/title_room_type"
            style="@style/TextNormal"
            />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_office" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_class_room" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_200"
        android:text="@string/title_confirm"
        android:layout_gravity="bottom"
        />


</LinearLayout>