<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_normal_100"
    android:background="@drawable/background_round_dialog"
    >

    <ProgressBar
        android:id="@+id/progress_bar_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_normal_100"
        android:text="@string/text_forgot_password"
        android:textAppearance="@style/TitleNormal" />

    <TextView
        android:id="@+id/text_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal_100"
        android:layout_marginEnd="@dimen/margin_normal_100"
        android:gravity="center_horizontal"
        android:text="@string/text_notify_forgot_password"
        android:textAppearance="@style/TextComment" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal_100"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:layout_marginEnd="@dimen/margin_normal_100"
        android:hint="@string/hint_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="@dimen/margin_normal_200"
        android:layout_marginStart="@dimen/margin_normal_100"
        android:layout_marginEnd="@dimen/margin_normal_100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/title_close" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_confirm"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog" />
    </LinearLayout>

</LinearLayout>