<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/margin_normal_200"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/image_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_normal_100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_normal_100" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_150"
        android:text="@string/up_case_app_name"
        android:textAppearance="@style/TitleNormal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_app_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_150"
        android:hint="@string/hint_input_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:hint="@string/hint_input_password"
        style="@style/Widget.OutLinePasswordInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_email"
        app:layout_constraintStart_toStartOf="@+id/input_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.EditTextPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_box_save_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:checked="true"
        android:text="@string/title_save_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        app:layout_constraintBottom_toTopOf="@+id/text_forgot_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/check_box_save_login"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal_150"
        android:text="@string/text_forgot_password"
        android:textAllCaps="true"
        android:textAppearance="@style/TextNormal"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start" />

    <ProgressBar
        android:id="@+id/progress_bar_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />
</androidx.constraintlayout.widget.ConstraintLayout>