<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_normal_100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_normal_100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hori_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_normal_100" />

    <TextView
        android:id="@+id/text_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_200"
        android:text="@string/title_close"
        android:textAppearance="@style/TextNormal"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_class_id" />

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm"
        android:textAppearance="@style/TextNormalBold"
        app:layout_constraintBottom_toBottomOf="@+id/text_close"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintTop_toTopOf="@+id/text_close" />

    <TextView
        android:id="@+id/text_title_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_filter"
        android:textAppearance="@style/TitleNormal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_hori_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:hint="@string/hint_input_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/text_title_sheet">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_class_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:hint="@string/input_class_id"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_class_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>